<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="563dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/butEmpilhar"
        android:layout_width="167dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="384dp"
        android:onClick="empilhar"
        android:text="@string/empilhar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/butDesempilhar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/butDesempilhar"
        android:layout_width="167dp"
        android:layout_height="36dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="384dp"
        android:onClick="desempilhar"
        android:text="@string/desempilhar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/butEmpilhar"
        app:layout_constraintTop_toBottomOf="@+id/valor1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textnum"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="152dp"
        android:text="@string/n_mero"
        app:layout_constraintBottom_toTopOf="@+id/butEmpilhar"
        app:layout_constraintEnd_toStartOf="@+id/valor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butSoma"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="296dp"
        android:onClick="somar"
        android:text="@string/soma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/butDiferenca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butEmpilhar" />

    <Button
        android:id="@+id/butDiferenca"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="297dp"
        android:onClick="subtrair"
        android:text="@string/diferenca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/butMult"
        app:layout_constraintStart_toEndOf="@+id/butSoma"
        app:layout_constraintTop_toBottomOf="@+id/butEmpilhar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/butMult"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="296dp"
        android:onClick="multiplicar"
        android:text="@string/mult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/butdDiv"
        app:layout_constraintStart_toEndOf="@+id/butDiferenca"
        app:layout_constraintTop_toBottomOf="@+id/butDesempilhar" />

    <Button
        android:id="@+id/butdDiv"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="297dp"
        android:onClick="dividir"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/butMult"
        app:layout_constraintTop_toBottomOf="@+id/butDesempilhar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textstack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="220dp"
        android:text="@string/stack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butSoma" />

    <TextView
        android:id="@+id/result"
        android:layout_width="207dp"
        android:layout_height="37dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginBottom="202dp"
        android:text="@string/staack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textstack"
        app:layout_constraintTop_toBottomOf="@+id/butMult"
        app:layout_constraintVertical_bias="1.0"
        tools:text="pilha" />

</androidx.constraintlayout.widget.ConstraintLayout>